Fix CodeMirror overlay alignment on new lines
On Firefox, when a user starts typing on a new line containing an inline slug
with a chimera, the chimera styles cause the CodeMirror overlay to be misaligned
relative to the VE source editor surface. This causes the text to appear blurred
on the affected line.

Adding a 2px negative margin to such chimeras in Firefox when CodeMirror is active
seems to successfully eliminate the misalignment and thus fix text display.

This is a port of If7e902d05e096f58ee8dc77dfe9a69bf3bd49882, which originally
aimed to apply the fix in CodeMirror's stylesheet.

Bug: T198278

--- a/src/ce/styles/nodes/ve.ce.BranchNode.css
+++ b/src/ce/styles/nodes/ve.ce.BranchNode.css
@@ -95,6 +95,8 @@
 .ve-ce-chimera-gecko {
 	/* Force height in empty branch */
 	border: 1px solid transparent;
+	/* Avoid interaction with absolutely positioned overlays like CodeMirror (T198278) */
+	margin-right: -2px;
 }
 
 .ve-ce-chimera-debug {
